fixing overflow issue on homepage mobile

--- a/wp-content/themes/hopscotch-2017/css/src/components/_promo.scss
+++ b/wp-content/themes/hopscotch-2017/css/src/components/_promo.scss
@@ -2,6 +2,8 @@
   margin: 8em 0;
   padding: 0 2em;
   position: relative;
+  max-width: 100%;
+  overflow-x: hidden;
 
   .triplet-image {
     min-height: 100%;
